--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="DevIdol"
+      content="Web site created using create-react-app"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
     />
     <title>DevIdol</title>
   </head>
