--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>Portfolio OF Ha Shing Thang</title>
+    <title>Portfolio Of Ha Shing Thang</title>
   </head>
   <body>
     <div id="root"></div>
